Ajout connexion/déconnexion + messages

--- a/project/adverts/templates/adverts/home.html
+++ b/project/adverts/templates/adverts/home.html
@@ -6,8 +6,7 @@
 
 {% include 'includes/navigation.html' %}
 
-<main role="main">
-
+<div class="container py-5">
     <div class="jumbotron py-100">
         <div class="container">
             <h1 class="display-3">Bienvenue sur Immotep</h1>
@@ -15,7 +14,6 @@
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Voir les annonces &raquo;</a></p>
         </div>
     </div>
-
-</main>
+</div>
 
 {% endblock %}
