--- a/project/adverts/templates/adverts/base.html
+++ b/project/adverts/templates/adverts/base.html
@@ -12,20 +12,25 @@
   </title>
   
   <!-- CSS only -->
-  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css"/>
+
   <link rel="stylesheet" href="{% static 'adverts/styles/style.css' %}" type="text/css"/>
 
-  <!-- JS, Popper.js, and jQuery -->
-  <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.bundle.min.js'%}"></script>
-  <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.min.js'%} "></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 
 </head>
 
 <body class="{% block body_class %}{% endblock %} bg-gray-200">
+  
+  {% include 'includes/messages.html' %}
 
   {% block content %}{% endblock content %}  
 
   {% include 'includes/footer.html' %} 
+
+  <!-- Scripts -->
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
 </html>
