--- a/project/adverts/templates/adverts/update_advert_form.html
+++ b/project/adverts/templates/adverts/update_advert_form.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
-{% block title %}Créer une annonce{% endblock %}
+{% block title %}Éditer une annonce{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="container">
         <form method="POST">
             {% csrf_token %}
-            {{ create_advert_form|crispy }}
-            <button type="submit" class="btn btn-success mt-3">Créer l'annonce</button>
+            {{ update_advert_form|crispy }}
+            <button type="submit" class="btn btn-success mt-3">Mettre à jour</button>
         </form>
     </div>
 {% endblock %}
