--- a/project/adverts/templates/adverts/base.html
+++ b/project/adverts/templates/adverts/base.html
@@ -12,10 +12,12 @@
   </title>
   
   <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <link rel="stylesheet" href="{% static 'adverts/styles/style.css' %}" type="text/css"/>
+  <link rel="stylesheet" href="{% static 'adverts/fonts/icomoon/style.css' %}">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  
 
 
 </head>
