Modification des infos de profil

--- a/project/adverts/templates/adverts/account.html
+++ b/project/adverts/templates/adverts/account.html
@@ -21,7 +21,7 @@
 			</div>
 			<div class="col-3 text-end d-flex flex-column justify-content-between">
 				<div class="edit">
-					<a href="" title="Modifier"><span class="icon-pencil"></span></a>
+					<a href="{% url 'adverts:update-account' %}" title="Modifier"><span class="icon-pencil"></span></a>
 				</div>
 				<div class="logout">
 					<a href="{% url 'adverts:logout' %}"><span class="small">Se déconnecter</span></a>
