Update login/register routes

--- a/project/adverts/templates/adverts/register.html
+++ b/project/adverts/templates/adverts/register.html
@@ -51,7 +51,7 @@
                     <div class="row justify-content-center">
                         <div class="col-8 text-center">
                             <button type="submit" class="btn buttonCustom mt-5">S'inscrire</button>
-                            <p class="text-center mt-3">Si vous possédez déjà un compte, <a href="/login">connectez-vous</a>.</p>
+                            <p class="text-center mt-3">Si vous possédez déjà un compte, <a href="{% url 'adverts:login' %}">connectez-vous</a>.</p>
                         </div>     
                     </div>
                 </div>
