--- a/project/adverts/templates/adverts/login.html
+++ b/project/adverts/templates/adverts/login.html
@@ -39,7 +39,7 @@
                     <div class="row justify-content-center">
                         <div class="col-8 text-center">
                             <button type="submit" class="btn buttonCustom mt-5">Se connecter</button>
-                            <p class="text-center mt-3">Vous n'avez pas de compte ? <a href="/register">S'inscrire</a>.</p> 
+                            <p class="text-center mt-3">Vous n'avez pas de compte ? <a href="{% url 'adverts:register' %}">S'inscrire</a>.</p> 
                         </div>     
                     </div>
                 </div>
