--- a/adverts/templates/adverts/base.html
+++ b/adverts/templates/adverts/base.html
@@ -21,6 +21,8 @@
   <link rel="stylesheet" href="{% static 'adverts/styles/style.css' %}" type="text/css"/>
   <link rel="stylesheet" href="{% static 'adverts/styles/other-properties.css' %}" type="text/css"/>
 
+  <link rel="stylesheet" href="{% static 'adverts/styles/filters.css' %}" type="text/css"/>
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   
   <link rel="stylesheet" href="{% static 'adverts/fonts/icomoon/style.css' %}">
