--- a/project/adverts/templates/adverts/base.html
+++ b/project/adverts/templates/adverts/base.html
@@ -26,6 +26,8 @@
 <body class="{% block body_class %}{% endblock %} bg-gray-200">
   
   {% include 'includes/messages.html' %}
+  
+  {% include 'includes/navigation.html' %}
 
   {% block content %}{% endblock content %}  
 
