--- a/project/adverts/templates/includes/navigation.html
+++ b/project/adverts/templates/includes/navigation.html
@@ -18,7 +18,7 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           {% if request.user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="" title="Favoris"><span class="icon-heart bg-primary rounded-circle text-white p-2"></span></a>
+            <a class="nav-link" href="{% url 'adverts:favories' %}" title="Favoris"><span class="icon-heart bg-primary rounded-circle text-white p-2"></span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'adverts:account' %}" title="Profil"><span class="icon-user bg-primary rounded-circle text-white p-2"></span></a>
