--- a/adverts/templates/includes/navigation.html
+++ b/adverts/templates/includes/navigation.html
@@ -12,7 +12,7 @@
             <a href="{% url 'adverts:create-advert' %}" class="nav-link btn btn-primary rounded-pill px-3 text-white"><span class="me-2 icon-add align-middle"></span>Déposer une annonce</a>
           </li>
           <li class="nav-item ms-2">
-            <a class="nav-link" href="">Voir les annonces</a>
+            <a class="nav-link" href="{% url 'adverts:properties-list' %}">Voir les annonces</a>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
