--- a/adverts/templates/includes/other-properties.html
+++ b/adverts/templates/includes/other-properties.html
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="container mt-5">
+    <h4 class="mb-3">Annonces partenaires</h4>
     <div class="row">
         {% for prop in properties %}
-        <div class="col-4">
+        <div class="col-4 my-4">
             <div class="card">
                 <div id="carouselExampleIndicators{{prop.id}}" class="carousel carousel-fade slide" data-bs-ride="carousel" data-bs-interval="false">
                     <div class="carousel-indicators">
