add greenhouse gas emission to adverts
- In models / forms and pages

--- a/adverts/templates/adverts/create_advert_form.html
+++ b/adverts/templates/adverts/create_advert_form.html
@@ -71,6 +71,9 @@
                                     {{ create_advert_form.energy_use|as_crispy_field }}
                                 </div>
                                 <div class="row mt-2">
+                                    {{ create_advert_form.greenhouse_gas|as_crispy_field }}
+                                </div>
+                                <div class="row mt-2">
                                     {{ create_advert_form.street_number|as_crispy_field }}
                                 </div>
                                 <div class="row mt-2">
