--- a/adverts/templates/adverts/home.html
+++ b/adverts/templates/adverts/home.html
@@ -15,13 +15,11 @@
         background-size: 60%;
     }
 
-    .advertBlock img {
+    .advertBlock .carousel-item {
         border-radius: 15px 0 0 15px;
-    }
-
-    #adsSlider {
-        background-image: url('https://via.placeholder.com/450x750/c4fffd/8F8F8F?text=pub1');
-        background-size: 100% 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 </style>
     <div class="py-5">
@@ -38,16 +36,10 @@
                                       <button type="button" data-bs-target="#userAdvertCarousel{{ forloop.counter }}" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                       <button type="button" data-bs-target="#userAdvertCarousel{{ forloop.counter }}" data-bs-slide-to="2" aria-label="Slide 3"></button>
                                     </div>
-                                    <div class="carousel-inner" style="width: 350px; height: 250px">
-                                      <div class="carousel-item active h-100">
-                                        <img src="https://resize-elle.ladmedia.fr/rcrop/638,,forcex/img/var/plain_site/storage/images/deco/pieces/petits-espaces/10-idees-d-amenagements-d-appartements-de-30-m2/95773946-5-fre-FR/10-idees-d-amenagements-d-appartements-de-30-m2.jpg" class="d-block w-100 h-100" alt="Image annonce 1">
-                                      </div>
-                                      <div class="carousel-item h-100">
-                                        <img src="https://static.cotemaison.fr/medias_11962/w_640,c_fill,g_north/sejour-avec-cuisine-et-salon-chambre-separee-par-une-verriere-noire_6124688.jpg" class="d-block w-100 h-100" alt="Image annonce 2">
-                                      </div>
-                                      <div class="carousel-item h-100">
-                                        <img src="https://storage.gra.cloud.ovh.net/v1/AUTH_e0b83750570d4ff1986fe199b41300e4/kimono/b9cdfed4e6b0f532ec6dbf1998c915f64df40ffa/600x370-fit-cover-orientation-0deg?width=600&height=370&fit=cover" class="d-block w-100 h-100" alt="Image annonce 3">
-                                      </div>
+                                    <div class="carousel-inner" style="width: 280px; height: 250px">
+                                      <div class="carousel-item active h-100" style="background-image: url('https://resize-elle.ladmedia.fr/rcrop/638,,forcex/img/var/plain_site/storage/images/deco/pieces/petits-espaces/10-idees-d-amenagements-d-appartements-de-30-m2/95773946-5-fre-FR/10-idees-d-amenagements-d-appartements-de-30-m2.jpg')"></div>
+                                      <div class="carousel-item h-100" style="background-image: url('https://static.cotemaison.fr/medias_11962/w_640,c_fill,g_north/sejour-avec-cuisine-et-salon-chambre-separee-par-une-verriere-noire_6124688.jpg')"></div>
+                                      <div class="carousel-item h-100" style="background-image: url('https://storage.gra.cloud.ovh.net/v1/AUTH_e0b83750570d4ff1986fe199b41300e4/kimono/b9cdfed4e6b0f532ec6dbf1998c915f64df40ffa/600x370-fit-cover-orientation-0deg?width=600&height=370&fit=cover')"></div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#userAdvertCarousel{{ forloop.counter }}" data-bs-slide="prev">
                                       <span class="carousel-control-prev-icon rounded-circle p-4 ms-3" aria-hidden="true"></span>
@@ -61,7 +53,7 @@
                                 <div class="px-3 d-flex flex-column justify-content-center w-100">
                                     {% if request.user.is_authenticated %}   
                                         <div class="d-flex justify-content-between">
-                                            <div class="h3 my-auto">{{ last_user_advert.price }}€</div>
+                                            <div class="h4 my-auto">{{ last_user_advert.price }}€</div>
                                             {% if user_favs|index:forloop.counter0 == last_user_advert.id %}
                                                 <a class="text-dark" href="{% url 'adverts:remove-favorite' last_user_advert.id %}" title="Supprimer des favoris">
                                                     <i class="bi bi-heart-fill" style="font-size: 2rem"></i>
@@ -75,16 +67,16 @@
                                     {% else %}
                                         <div class="h3">{{ last_user_advert.price }}€</div>
                                     {% endif %}
-                                    <div class="fw-bold mb-2">{{ last_user_advert.service_type }} / {{ last_user_advert.property_type }}</div>
-                                    <div class="fw-bold">{{ last_user_advert.room_count }} pièce(s) - {{ last_user_advert.bedroom_count }} chambre(s) - {{ last_user_advert.surface }}m²</div>
-                                    <div class="fw-bold">
+                                    <div class="fw-bold mb-2 small">{{ last_user_advert.service_type }} / {{ last_user_advert.property_type }}</div>
+                                    <div class="fw-bold small">{{ last_user_advert.room_count }} pièce(s) - {{ last_user_advert.bedroom_count }} chambre(s) - {{ last_user_advert.surface }}m²</div>
+                                    <div class="fw-bold small">
                                         {% if last_user_advert.is_furnished %}Meublé{% endif %}
                                         {% if last_user_advert.has_balcony %}Balcon{% endif %}
                                         {% if last_user_advert.has_terrace %}Terasse{% endif %}
                                         {% if last_user_advert.has_elevator %}Ascenseur{% endif %}
                                         {% if last_user_advert.has_parking %}Parking{% endif %}
                                     </div>   
-                                    <div class="mt-2">{{ last_user_advert.street_number }} {{ last_user_advert.street_name }} à {{ last_user_advert.city }} ({{ last_user_advert.postal_code }})</div>
+                                    <div class="mt-2 small">{{ last_user_advert.street_number }} {{ last_user_advert.street_name }} à {{ last_user_advert.city }} ({{ last_user_advert.postal_code }})</div>
                                     <a class="link-info text-decoration-none mt-4" href="{% url 'adverts:details-advert' last_user_advert.id %}">Voir les infos</a>  
                                 </div>
                             </div>
