--- a/adverts/templates/adverts/account.html
+++ b/adverts/templates/adverts/account.html
@@ -63,14 +63,20 @@
 								{% if request.user.is_authenticated %}   
 									<div class="d-flex justify-content-between">
 										<div class="h3 my-auto">{{ user_advert.price }}€</div>
-										{% if user_favs|index:forloop.counter0 == user_advert.id %}
-											<a class="text-dark" href="{% url 'adverts:remove-favorite' user_advert.id %}" title="Supprimer des favoris">
-												<i class="bi bi-heart-fill" style="font-size: 2rem"></i>
+										{% if user_advert.creator.id == user.id %}
+											<a class="text-dark" href="{% url 'adverts:update-advert' user_advert.id %}" title="Modifier mon annonce">
+												<i class="bi bi-gear" style="font-size: 2rem"></i>
 											</a>
 										{% else %}
-											<a class="text-dark" href="{% url 'adverts:add-favorite' user_advert.id %}" title="Ajouter en favori">
-												<i class="bi bi-heart" style="font-size: 2rem"></i>
-											</a>
+											{% if user_favs|index:forloop.counter0 == user_advert.id %}
+												<a class="text-dark" href="{% url 'adverts:remove-favorite' user_advert.id %}" title="Supprimer des favoris">
+													<i class="bi bi-heart-fill" style="font-size: 2rem"></i>
+												</a>
+											{% else %}
+												<a class="text-dark" href="{% url 'adverts:add-favorite' user_advert.id %}" title="Ajouter en favori">
+													<i class="bi bi-heart" style="font-size: 2rem"></i>
+												</a>
+											{% endif %}
 										{% endif %}
 									</div>
 								{% else %}
