--- a/adverts/templates/adverts/account.html
+++ b/adverts/templates/adverts/account.html
@@ -91,7 +91,8 @@
 									{% if user_advert.has_elevator %}Ascenseur{% endif %}
 									{% if user_advert.has_parking %}Parking{% endif %}
 								</div>   
-								<div class="mt-2">{{ user_advert.street_number }} {{ user_advert.street_name }} à {{ user_advert.city }} ({{ user_advert.postal_code }})</div>  
+								<div class="mt-2">{{ user_advert.street_number }} {{ user_advert.street_name }} à {{ user_advert.city }} ({{ user_advert.postal_code }})</div>
+								<a class="link-info text-decoration-none mt-4" href="{% url 'adverts:details-advert' user_advert.id %}">Voir l'annonce</a>    
 							</div>
 						</div>
 					{% endfor %}
