--- a/adverts/templates/adverts/properties_list.html
+++ b/adverts/templates/adverts/properties_list.html
@@ -97,14 +97,20 @@
                                 {% if request.user.is_authenticated %}   
                                     <div class="d-flex justify-content-between">
                                         <div class="h3 my-auto">{{ last_user_advert.price }}€</div>
-                                        {% if user_favs|index:forloop.counter0 == last_user_advert.id %}
-                                            <a class="text-dark" href="{% url 'adverts:remove-favorite' last_user_advert.id %}" title="Supprimer des favoris">
-                                                <i class="bi bi-heart-fill" style="font-size: 2rem"></i>
+                                        {% if last_user_advert.creator.id == user.id %}
+                                            <a class="text-dark" href="{% url 'adverts:update-advert' last_user_advert.id %}" title="Modifier mon annonce">
+                                                <i class="bi bi-gear" style="font-size: 2rem"></i>
                                             </a>
                                         {% else %}
-                                            <a class="text-dark" href="{% url 'adverts:add-favorite' last_user_advert.id %}" title="Ajouter en favori">
-                                                <i class="bi bi-heart" style="font-size: 2rem"></i>
-                                            </a>
+                                            {% if user_favs|index:forloop.counter0 == last_user_advert.id %}
+                                                <a class="text-dark" href="{% url 'adverts:remove-favorite' last_user_advert.id %}" title="Supprimer des favoris">
+                                                    <i class="bi bi-heart-fill" style="font-size: 2rem"></i>
+                                                </a>
+                                            {% else %}
+                                                <a class="text-dark" href="{% url 'adverts:add-favorite' last_user_advert.id %}" title="Ajouter en favori">
+                                                    <i class="bi bi-heart" style="font-size: 2rem"></i>
+                                                </a>
+                                            {% endif %}
                                         {% endif %}
                                     </div>
                                 {% else %}
@@ -119,7 +125,8 @@
                                     {% if last_user_advert.has_elevator %}Ascenseur{% endif %}
                                     {% if last_user_advert.has_parking %}Parking{% endif %}
                                 </div>   
-                                <div class="mt-2">{{ last_user_advert.street_number }} {{ last_user_advert.street_name }} à {{ last_user_advert.city }} ({{ last_user_advert.postal_code }})</div>  
+                                <div class="mt-2">{{ last_user_advert.street_number }} {{ last_user_advert.street_name }} à {{ last_user_advert.city }} ({{ last_user_advert.postal_code }})</div>
+                                <a class="link-info text-decoration-none mt-4" href="{% url 'adverts:details-advert' last_user_advert.id %}">Voir l'annonce</a> 
                             </div>
                         </div>
                     {% endfor %}
