--- a/adverts/templates/adverts/account.html
+++ b/adverts/templates/adverts/account.html
@@ -67,8 +67,16 @@
 										<div>
 											<a class="text-dark" href="{% url 'adverts:update-advert' user_advert.id %}" title="Modifier mon annonce">
 												<i class="bi bi-gear" style="font-size: 2rem"></i></a>
-											<a class="text-dark" href="{% url 'adverts:delete-advert' user_advert.id %}" title="Supprimer mon annonce">
-												<i class="bi bi-trash" style="font-size: 2rem"></i></a>
+											<a
+											href="{% url 'adverts:delete-advert' user_advert.id %}"
+											class="text-dark"
+											data-bs-toggle="modal"
+											data-bs-target="#delete-item-modal"
+											id="delete-item"
+											title="Supprimer mon annonce"
+											>
+												<i class="bi bi-trash" style="font-size: 2rem"></i>
+											</a>
 										</div>
 										{% else %}
 											{% if user_favs|index:forloop.counter0 == user_advert.id %}
@@ -105,5 +113,7 @@
 		</div>
 	</div>
 </div>
+
+{% include "includes/confirm_modal.html" %}
 
 {% endblock %}
