--- a/adverts/templates/adverts/details-advert.html
+++ b/adverts/templates/adverts/details-advert.html
@@ -56,12 +56,12 @@
         <div class="col-7 px-0">
             <div id="userAdvertCarousel" class="carousel carousel-fade slide w-100 h-100" data-bs-ride="carousel" data-bs-interval="false">
                 <div class="carousel-indicators mx-auto rounded">
-                  <button type="button" data-bs-target="#userAdvertCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#userAdvertCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#userAdvertCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    {% for i in advert_infos.picture_count %}
+                        <button type="button" data-bs-target="#userAdvertCarousel" data-bs-slide-to="{{ i }}" {% if forloop.first %}class="active" aria-current="true"{% endif %} aria-label="Slide {{ forloop.counter }}"></button>
+                    {% endfor %}
                 </div>
                 <div class="carousel-inner" style="width: 100%; height: 100%">
-                    {% for picture in pictures %}
+                    {% for picture in advert_infos.pictures %}
                         <div class="carousel-item h-100 {% if forloop.first %}active{% endif %}" style="background-image: url('{% get_media_prefix %}images/{{ advert_infos.id }}/{{ picture }}')"></div>
                     {% endfor %}
                 </div>
